--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,5 +33,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-
+    implementation "com.google.dagger:hilt-android:2.29-alpha"
+    androidTestImplementation "com.google.dagger:hilt-android-testing:2.29-alpha"
+    annotationProcessor "com.google.dagger:hilt-compiler:2.29-alpha"
 }
