--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,13 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
 
 android {
+    kapt {
+        generateStubs = true
+    }
+
     compileSdkVersion 30
     buildToolsVersion "30.0.2"
 
@@ -35,5 +40,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation "com.google.dagger:hilt-android:2.29-alpha"
     androidTestImplementation "com.google.dagger:hilt-android-testing:2.29-alpha"
-    annotationProcessor "com.google.dagger:hilt-compiler:2.29-alpha"
+    kapt "com.google.dagger:hilt-compiler:2.29-alpha"
+    implementation "androidx.lifecycle:lifecycle-extensions:2.0.0-rc01"
 }
